--- a/templates/admin/admin_test.html.twig
+++ b/templates/admin/admin_test.html.twig
@@ -24,6 +24,7 @@
             </table>
         </div>
     </div>
+    {% if (bloc) %}
     <div class="box">
         <div class="box-header with-border">
             <h2 class="box-title">Блокировки</h2>
@@ -55,6 +56,7 @@
         </table>
         </div>
     </div>
+    {% endif %}
     <div class="box">
         <div class="box-header with-border">
             <h2 class="box-title">Активные запросы</h2>
